--- a/VideoScreensaver/MainWindow.xaml
+++ b/VideoScreensaver/MainWindow.xaml
@@ -1,12 +1,13 @@
 ﻿<Window x:Class="VideoScreensaver.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Height="350" Width="525" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" WindowState="Maximized" Cursor="None" Title="Video Screensaver" WindowStyle="None" Background="Black" KeyDown="ScrKeyDown" MouseMove="ScrMouseMove" MouseDown="ScrMouseDown" MouseWheel="ScrMouseWheel" SizeChanged="ScrSizeChange" Loaded="OnLoaded">
+        Height="350" Width="525" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" WindowState="Maximized" Cursor="None" Title="Video Screensaver" WindowStyle="None" Background="Black" KeyDown="ScrKeyDown" MouseMove="ScrMouseMove" MouseDown="ScrMouseDown" MouseWheel="ScrMouseWheel" Loaded="OnLoaded">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <MediaElement Margin="0" Name="FullScreenMedia" HorizontalAlignment="Center" Height="350" VerticalAlignment="Center" Width="525" Volume="0" MediaEnded="MediaEnded" />
+        <Image Name="FullScreenImage"></Image>
+        <MediaElement Margin="0" Name="FullScreenMedia" Volume="0" MediaEnded="MediaEnded" />
         <TextBlock Name="ErrorText" FontSize="24" Text="" TextWrapping="Wrap" Foreground="White" Visibility="Hidden" />
     </Grid>
 </Window>
